--- a/resources/pugSource/parseFavorites.pug
+++ b/resources/pugSource/parseFavorites.pug
@@ -1,17 +1,17 @@
-table
+script(src='./resources/javascripts/sortTable.js')
+table(id="tagSummaryTable")
     tr
-        th Category
-        th Subcategory
-        th Galleries<br>Favourited
-        th Search Link
+        th(onclick="sortTable(0)") Category
+        th(onclick="sortTable(1)") Subcategory
+        th(onclick="sortTable(2)") Galleries<br>Favourited
         th Gallery Links
     each tag in locals
         tr 
-            td #{tag.category}
-            td #{tag.subcategory}
-            td #{tag.size}
-            td 
-                a(href=tag.url) Link
+            td(id="tdcat_"+tag.category)
+                a(href=tag.url) #{tag.category}
+            td(id="tdsubcat_"+tag.subcategory) 
+                a(href=tag.url) #{tag.subcategory}
+            td(id="tdsize_"+tag.size) #{tag.size}
             td 
                 each gallery in tag.galleries
                     a(href='https://e-hentai.org/g/'+gallery[0]+'/'+gallery[1]+'/') Link, 
