--- a/resources/stylesheets/style.css
+++ b/resources/stylesheets/style.css
@@ -53,6 +53,29 @@
 	height: 100%;
 }
 
+.xport_favourite_cell {
+	position: relative;
+	background-color: #f2f0e4;
+	border: 1px solid #ceb6b7;
+	left: 0.2em;
+	top: 0.2em;
+	bottom: 0.2em;
+	right: 0.2em;
+	text-align: center;
+}
+
+div.gt {
+	float:left;
+	font-weight:bold;
+	padding:1px 4px;
+	margin:0 2px 5px 2px;
+	position:relative;
+	border-radius:5px;
+	border:1px solid #806769;
+	background:#F2EFDF
+}
+
+
 :root.xport_ex .xport_info_progress_container1 {
 	background-color: #43464e;
 	border-color: #34353b;
