processing log working with array

--- a/resources/pugSource/parseFavorites.pug
+++ b/resources/pugSource/parseFavorites.pug
@@ -22,6 +22,8 @@ table(id="tagSummaryTable")
                 div(style="height:5.5em;overflow:auto") 
                     each gallery in tag.galleries
                         div(class="gt")
-                            a(href='https://e-hentai.org/g/'+gallery[0]+'/'+gallery[1]+'/') Link, 
+                            a(href='https://e-hentai.org/g/'+gallery[0]+'/'+gallery[1]+'/') #{gallery[2]}, 
+                            br
+                            |
             
 
