--- a/resources/pugSource/tagSummaryTable.pug
+++ b/resources/pugSource/tagSummaryTable.pug
@@ -21,9 +21,9 @@ table(id="tagSummaryTable")
                     br 
                     sup(style="font-size: 0.6em")
                         a(href="https://ehwiki.org/wiki/"+tag.subcategory) [?]
-            td(style="width:5%" id="tdsize_"+tag.size class="xport_favourite_cell") 
+            td(style="width:5%" id="tdsize_"+tag.count class="xport_favourite_cell") 
                 div(style="display: inline-block")
-                    div(class="gt") #{tag.size}
+                    div(class="gt") #{tag.count}
             td(class="xport_favourite_cell" style="width:80%; text-align:left; line-height: 86%; font-size: 1.0em")
                 div(style="height:5.5em;overflow:auto; resize: vertical") 
                     table(id="galleries")
