--- a/resources/stylesheets/style.css
+++ b/resources/stylesheets/style.css
@@ -8,6 +8,20 @@
 	text-align: left;
 	overflow: hidden;
 }
+
+.xport_tag_box {
+	position: relative;
+	border-radius: 3px;
+	background-color: #e3e0d1;
+	border: 1px solid #5c0d12;
+	z-index: 99;
+	width: 90%;
+	padding: 0;
+	text-align: left;
+	/* overflow: hidden; */
+	height: 100%;
+}
+
 :root.xport_ex .xport_info_box {
 	border-radius: 0;
 	background-color: #43464e;
@@ -75,11 +89,54 @@ div.gt {
 	background:#F2EFDF
 }
 
-div.main {
-	width:100%;
-	text-align:center;
+div.header {
+	position: fixed;
+	width: 100%;
+	height: 5%; 
+	top: 0;
 }
 
+div.main {
+	position: fixed;
+	top: 5%;
+	bottom: 5%;
+	width:100%;
+}
+
+div.footer {
+	position: fixed;
+	width: 100%;
+	bottom: 5%;
+	border:1px solid #5c0d12;
+	z-index: 999; 
+	/* height: 60px;  */
+	bottom:0; 
+	left:1em; 
+	right:1em;
+	/* display:inline-block */
+}
+
+div.results {
+	width: 50%;
+	position: fixed;
+	left: 50%;
+	top: 5%;
+	bottom: 5%;
+	height: 90%;
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
+.chart {
+	width: 40%;
+	position: fixed;
+	left: 5%;
+	top: 5%
+}
+
+table#tagSummaryTable {
+	width: 100%
+}
 
 :root.xport_ex .xport_info_progress_container1 {
 	background-color: #43464e;
