--- a/resources/stylesheets/style.css
+++ b/resources/stylesheets/style.css
@@ -9,18 +9,7 @@
 	overflow: hidden;
 }
 
-.xport_tag_box {
-	position: relative;
-	border-radius: 3px;
-	background-color: #e3e0d1;
-	border: 1px solid #5c0d12;
-	z-index: 99;
-	width: 90%;
-	padding: 0;
-	text-align: left;
-	/* overflow: hidden; */
-	height: 100%;
-}
+
 
 :root.xport_ex .xport_info_box {
 	border-radius: 0;
@@ -91,6 +80,8 @@ div.gt {
 
 div.header {
 	position: fixed;
+	border:1px solid #5c0d12;
+	z-index: 999; 
 	width: 100%;
 	height: 5%; 
 	top: 0;
@@ -116,22 +107,88 @@ div.footer {
 	/* display:inline-block */
 }
 
-div.results {
-	width: 50%;
-	position: fixed;
-	left: 50%;
-	top: 5%;
-	bottom: 5%;
-	height: 90%;
-	overflow-y: scroll;
-	overflow-x: hidden;
+
+canvas.chart {
+	/* width:inherit;
+	height: inherit; */
+	/* left: 5%;
+	top: 5% */
 }
 
-.chart {
-	width: 40%;
-	position: fixed;
-	left: 5%;
-	top: 5%
+div.chart, div.results {
+	position: inherit;
+	width: 50%;
+	height: 90%;
+}
+
+div.chart {
+	left: 0%;
+	text-align: center;
+}
+
+div.chart_contents {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
+div.chart_draw_box {
+	height: 100%;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+div.results {
+	left: 50%;
+	border-radius: 3px;
+	background-color: #e3e0d1;
+	border: 1px solid #5c0d12;
+}
+
+div.results_scroll_box {
+	/* position: relative;
+	border-radius: 3px;
+	background-color: #e3e0d1;
+	border: 1px solid #5c0d12;
+	z-index: 99;
+	width: 90%;
+	padding: 0;
+	text-align: left; */
+	overflow-y: scroll;
+	overflow-x: hidden;
+	height: 100%;
+}
+
+div.results_data {
+	position: relative;
+	/* border-radius: 3px;
+	background-color: #e3e0d1;
+	border: 1px solid #5c0d12; */
+	z-index: 99;
+	width: 90%;
+	padding: 0;
+	text-align: left;
+	height: 100%;
+}
+
+textarea.logging_footer {
+	margin: 0;
+	/* padding: 0.25em; */
+	border: 0;
+	/* resize: vertical; */
+	width: 100%;
+	height: 100%;
+	/* min-height: 3em;
+	line-height: 1.25em; */
+	font-size: 1em;
+	font-family: inherit;
+	border-radius: 0;
+	box-sizing: border-box;
+	display: block;
+	white-space: pre;
+	overflow-wrap: normal;
+	overflow: auto;
+	background-color: #f2f0e4;
 }
 
 table#tagSummaryTable {
