completely functional website created localy

--- a/resources/pugSource/tagSummaryMain.pug
+++ b/resources/pugSource/tagSummaryMain.pug
@@ -1,7 +1,9 @@
 head 
     link(rel="stylesheet", href="./resources/stylesheets/style.css")
 body(style='font-size:8pt;font-family:arial,helvetica,sans-serif;color:#5C0D11;background:#E3E0D1;padding:2px;margin:0;text-align:center')
-    div(class='header') Tag Summary
+    div(class='header') 
+        div(class='header_content')
+            h1(class="ih") E-Hentai Galleries: Summary of Favourites by Tag
     div(class='main')
         div(class="chart")
             div(class="chart_contents")
