--- a/resources/stylesheets/style.css
+++ b/resources/stylesheets/style.css
@@ -107,8 +107,8 @@ div.footer {
 	z-index: 999; 
 	/* height: 60px;  */
 	bottom:0; 
-	/* left:1em;  */
-	/* right:1em; */
+	left:1px; 
+	right:1px;
 	/* display:inline-block */
 }
 
